a basic implementation of a command relay

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,7 +18,18 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>logging-services</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <!-- Package as an executable jar -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
