--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,4 +22,14 @@
         </dependency>
     </dependencies>
 
+    <!-- Package as an executable jar -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
